2003-03-25  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-monitor.c:
	Don't queue changes to canceled monitors.
	Fix sign bug that caused events to be missed.
	Fix theoretical race with setting up the idle handler.

2003-03-23  Murray Cumming  <murrayc@usa.net>

	* doc/about.sgml: Simple Sample Progam: Allocated memory for the 
	read buffer. Initializing this to 0 would show the error. I don't
	know how this ran without crashing before.
	
2003-03-24  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-job.c (_gnome_vfs_job_destroy_notify_result):
	Don't free OP_XFER notify result. Its stack-allocated. (#100654)

2003-03-20  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS

2003-03-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c (copy_symlink):
	Check for errors when copying symlinks.

2003-03-14  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-monitor.c (gnome_vfs_monitor_callback):
	Throttle the change event rate so that applications don't
	use 100% cpu when monitoring a directory someone is downloading
	to.

2003-03-14  Dave Camp  <dave@ximian.com>

	* libgnomevfs/gnome-vfs-job.c (_gnome_vfs_job_destroy_notify_result): 
	Remove the unnecessary g_warning here.

2003-03-14  Joël Brich <joel.brich@laposte.net>

	* configure.in: Added "eo" to ALL_LINGUAS.

2003-03-14  Michael Meeks  <michael@server.home>

	* test/test-shell.c (do_ssl): impl.
	(main, list_commands): upd.

2003-03-14  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Remove hardcoded ACLOCAL_AMFLAGS.
	Please do not make changes to modules without
	permission from the maintainer.

==== gnome-vfs 2.2.3 ====
	
2003-03-10  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.2.3

2003-03-05  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Try pkg-config for detecting openssl.
	Add --disable-openssl to not use openssl